--- a/packages/webview/index.html
+++ b/packages/webview/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" style="width: 100%; height: 100%"></div>
     <script type="module" src="./src/main.ts"></script>
   </body>
 </html>
